--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="/assets/Logo.svg" alt="Rayclean Logo">
+            <img src="./assets/Logo.svg" alt="Rayclean Logo">
         </div>
     </div>
     <div class="container">
@@ -28,7 +28,7 @@
         <div class="twocolumns">
             <div class="column">
                 <div class="picture">
-                    <img src="/assets/Cleaning_01.jpg" alt="Rayclean c.v.">
+                    <img src="./assets/Cleaning_01.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
             <div class="column">
@@ -54,7 +54,7 @@
             </div>
             <div class="column">
                 <div class="picture">
-                    <img src="/assets/Cleaning_08.jpg" alt="Rayclean c.v.">
+                    <img src="./assets/Cleaning_08.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
         <div class="twocolumns">
             <div class="column">
                 <div class="picture">
-                    <img src="/assets/Cleaning_02.jpg" alt="Rayclean c.v.">
+                    <img src="./assets/Cleaning_02.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
             <div class="column">
@@ -78,7 +78,7 @@
             </div>
             <div class="column">
                 <div class="picture">
-                    <img src="/assets/Cleaning_03.jpg" alt="Rayclean c.v.">
+                    <img src="./assets/Cleaning_03.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="twocolumns">
             <div class="column">
                 <div class="picture">
-                    <img src="/assets/Cleaning_04.jpg" alt="Rayclean c.v.">
+                    <img src="./assets/Cleaning_04.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
             <div class="column">
