--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Forum&display=swap');
     </style>
 
 </head>
@@ -41,7 +42,7 @@
                     <img src="./assets/Cleaning_01.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
-            <div class="column">
+            <div class="columntext">
                 <h3>Professionele schoonmaak van gemeenschappelijke delen</h3>
                 <p>Onze kernactiviteit is de professionele schoonmaak van gemeenschappelijke delen. Denk aan inkomhallen, trappen, liften en gangen die dagelijks intensief gebruikt worden. RayClean c.v. staat garant voor een grondige en consequente aanpak, aangepast aan elk gebouw in Middelkerke, Westende, Lombardsijde of Oostende.</p>
                 <p>Wij werken uitsluitend met professionele producten en materialen, geschikt voor langdurig onderhoud.</p>
@@ -49,7 +50,7 @@
         </div>
 
         <div class="twocolumns">
-            <div class="column">
+            <div class="columntext">
                 <h3>Wat omvat onze schoonmaakservice?</h3>
                 <p>Onze schoonmaakdiensten voor gemeenschappelijke delen kunnen onder andere omvatten:</p>
                     <ul>
@@ -67,22 +68,16 @@
                     <img src="./assets/Cleaning_08.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
-        </div>
-
-        <div class="twocolumns">
             <div class="column">
                 <div class="picture">
                     <img src="./assets/Cleaning_02.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
-            <div class="column">
+            <div class="columntext">
                 <h3>Lokale schoonmaakfirma aan de kust</h3>
                 <p>Als <b>lokale schoonmaakfirma actief in Middelkerke, Westende, Lombardsijde en Oostende,</b> kent RayClean c.v. de specifieke uitdagingen van gebouwen aan zee. Zand, zout en veelvuldige passage vereisen een regelmatige en doordachte schoonmaak. Wij bieden flexibele onderhoudsformules aan: wekelijks, tweewekelijks of volgens een vast schema.</p>
             </div>
-        </div>
-
-        <div class="twocolumns">
-            <div class="column">
+            <div class="columntext">
                 <h3>Voor syndici en mede-eigenaars</h3>
                 <p>RayClean c.v. is een betrouwbare partner voor <b>syndici, gebouwbeheerders en verenigingen van mede-eigenaars</b> in de kustregio. Wij werken met duidelijke afspraken, vaste contactpersonen en een stipte uitvoering. Zo bent u zeker van een nette en verzorgde gemeenschappelijke omgeving.</p>
             </div>
@@ -91,15 +86,12 @@
                     <img src="./assets/Cleaning_03.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
-        </div>
-
-        <div class="twocolumns">
             <div class="column">
                 <div class="picture">
                     <img src="./assets/Cleaning_04.jpg" alt="Rayclean c.v.">
                 </div>
             </div>
-            <div class="column">
+            <div class="columntext">
                 <h3>Waarom kiezen voor RayClean c.v.?</h3>
                 <ul>
                     <li>Specialist in schoonmaak van gemeenschappelijke delen</li>
@@ -112,12 +104,12 @@
             </div>
         </div>
         
-        <div class="content">
+        <div class="contentwit">
             <h3>Offerte voor schoonmaak in Middelkerke</h3>
             <p>Bent u op zoek naar een <b>betrouwbare schoonmaakfirma voor de gemeenschappelijke delen van uw gebouw in Middelkerke, Westende, Lombardsijde of Oostende?</b></p>
             <p>Neem gerust contact op met <b>RayClean c.v.</b> voor een <b>vrijblijvende offerte</b> of meer informatie. Wij helpen u graag verder.</p>
         </div>
-
+    </div>
         <div class="contact">
             <h3>Contacteer ons</h3>
             <form action="https://api.web3forms.com/submit" method="POST">
@@ -133,7 +125,7 @@
                 <button type="submit">Verzenden</button>
             </form>
         </div>
-        </div>
+        
 
 
 
