Better text breaking

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <div class="content">
             <h1>Rayclean c.v.</h1>
                 <h3>Schoonmaak van gemeenschappelijke delen in Middelkerke en omgeving</h3>
-                <p><b>RayClean c.v.</b> is gespecialiseerd in de <b>schoonmaak van gemeenschappelijke delen van gebouwen in Middelkerke, Westende, Lombardsijde en Oostende.</b> Wij zorgen voor propere en goed onderhouden gemeenschappelijke ruimtes in appartementsgebouwen, residenties en gedeelde panden aan de kust. Een verzorgde inkomhal en trappenhal dragen bij aan een positieve eerste indruk én een aangename woonomgeving.</p>
+                <p><b>RayClean c.v.</b> is gespecialiseerd in de <b>schoonmaak van gemeenschappelijke delen van gebouwen <br>
+                    in Middelkerke, Westende, Lombardsijde en Oostende.</b> <br>
+                    Wij zorgen voor propere en goed onderhouden gemeenschappelijke ruimtes in appartementsgebouwen, <br>
+                    residenties en gedeelde panden aan de kust. <br>
+                    <br>
+                    Een verzorgde inkomhal en trappenhal dragen bij aan een positieve eerste indruk <br>
+                    én een aangename woonomgeving.</p>
         </div>
     </div>
     <div class="topline">
@@ -53,8 +59,13 @@
             </div>
             <div class="columntext">
                 <h3>Professionele schoonmaak van gemeenschappelijke delen</h3>
-                <p>Onze kernactiviteit is de professionele schoonmaak van gemeenschappelijke delen. Denk aan inkomhallen, trappen, liften en gangen die dagelijks intensief gebruikt worden. RayClean c.v. staat garant voor een grondige en consequente aanpak, aangepast aan elk gebouw in Middelkerke, Westende, Lombardsijde of Oostende.</p>
-                <p>Wij werken uitsluitend met professionele producten en materialen, geschikt voor langdurig onderhoud.</p>
+                <p>Onze kernactiviteit is de professionele schoonmaak van gemeenschappelijke delen. <br>
+                Denk aan inkomhallen, trappen, liften en gangen die dagelijks intensief gebruikt worden. <br>
+                RayClean c.v. staat garant voor een grondige en consequente aanpak, <br>
+                aangepast aan elk gebouw in Middelkerke, Westende, Lombardsijde of Oostende.</p>
+                <br>
+                <p>Wij werken uitsluitend met professionele producten en materialen, <br>
+                geschikt voor langdurig onderhoud.</p>
             </div>
         </div>
 
@@ -84,11 +95,20 @@
             </div>
             <div class="columntext">
                 <h3>Lokale schoonmaakfirma aan de kust</h3>
-                <p>Als <b>lokale schoonmaakfirma actief in Middelkerke, Westende, Lombardsijde en Oostende,</b> kent RayClean c.v. de specifieke uitdagingen van gebouwen aan zee. Zand, zout en veelvuldige passage vereisen een regelmatige en doordachte schoonmaak. Wij bieden flexibele onderhoudsformules aan: wekelijks, tweewekelijks of volgens een vast schema.</p>
+                <p>Als <b>lokale schoonmaakfirma actief in Middelkerke, Westende, Lombardsijde en Oostende,</b> <br>
+                kent RayClean c.v. de specifieke uitdagingen van gebouwen aan zee. <br>
+                Zand, zout en veelvuldige passage vereisen een regelmatige en doordachte schoonmaak. <br>
+                <br>
+                Wij bieden flexibele onderhoudsformules aan: wekelijks, tweewekelijks of volgens een vast schema.</p>
             </div>
             <div class="columntext">
                 <h3>Voor syndici en mede-eigenaars</h3>
-                <p>RayClean c.v. is een betrouwbare partner voor <b>syndici, gebouwbeheerders en verenigingen van mede-eigenaars</b> in de kustregio. Wij werken met duidelijke afspraken, vaste contactpersonen en een stipte uitvoering. Zo bent u zeker van een nette en verzorgde gemeenschappelijke omgeving.</p>
+                <p>RayClean c.v. is een betrouwbare partner voor <b>syndici, gebouwbeheerders <br>
+                    en verenigingen van mede-eigenaars</b> in de kustregio. <br>
+                    <br>
+                    Wij werken met duidelijke afspraken, vaste contactpersonen en een stipte uitvoering. <br>
+                    <br>
+                    Zo bent u zeker van een nette en verzorgde gemeenschappelijke omgeving.</p>
             </div>
             <div class="column">
                 <div class="picture">
@@ -115,8 +135,12 @@
         
         <div class="contentwit">
             <h3>Offerte voor schoonmaak in Middelkerke</h3>
-            <p>Bent u op zoek naar een <b>betrouwbare schoonmaakfirma voor de gemeenschappelijke delen van uw gebouw in Middelkerke, Westende, Lombardsijde of Oostende?</b></p>
-            <p>Neem gerust contact op met <b>RayClean c.v.</b> voor een <b>vrijblijvende offerte</b> of meer informatie. Wij helpen u graag verder.</p>
+            <p>Bent u op zoek naar een <b>betrouwbare schoonmaakfirma voor de gemeenschappelijke delen van uw gebouw <br>
+            in Middelkerke, Westende, Lombardsijde of Oostende?</b></p>
+            <br>
+            <p>Neem gerust contact op met <b>RayClean c.v.</b> voor een <b>vrijblijvende offerte</b> of meer informatie. <br>
+            <br>
+            Wij helpen u graag verder.</p>
         </div>
     </div>
         <div class="contact">
