Omgeving van Middelkerke weg gedaan

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="container">
         <div class="content">
             <h1>Rayclean c.v.</h1>
-                <h3>Schoonmaak van gemeenschappelijke delen in Middelkerke en omgeving</h3>
+                <h3>Schoonmaak van gemeenschappelijke delen in Middelkerke en omgeving.</h3>
                 <p><b>RayClean c.v.</b> is gespecialiseerd in de <b>schoonmaak van gemeenschappelijke delen van gebouwen <br>
-                    in Middelkerke, Westende, Lombardsijde en Oostende.</b> <br>
+                    in Middelkerke.</b> <br>
                     Wij zorgen voor propere en goed onderhouden gemeenschappelijke ruimtes in appartementsgebouwen, <br>
                     residenties en gedeelde panden aan de kust. <br>
                     <br>
@@ -62,7 +62,7 @@
                 <p>Onze kernactiviteit is de professionele schoonmaak van gemeenschappelijke delen. <br>
                 Denk aan inkomhallen, trappen, liften en gangen die dagelijks intensief gebruikt worden. <br>
                 RayClean c.v. staat garant voor een grondige en consequente aanpak, <br>
-                aangepast aan elk gebouw in Middelkerke, Westende, Lombardsijde of Oostende.</p>
+                aangepast aan elk gebouw in Middelkerke en omgeving.</p>
                 <br>
                 <p>Wij werken uitsluitend met professionele producten en materialen, <br>
                 geschikt voor langdurig onderhoud.</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="columntext">
                 <h3>Lokale schoonmaakfirma aan de kust</h3>
-                <p>Als <b>lokale schoonmaakfirma actief in Middelkerke, Westende, Lombardsijde en Oostende,</b> <br>
+                <p>Als <b>lokale schoonmaakfirma actief in Middelkerke en omgeving.</b> <br>
                 kent RayClean c.v. de specifieke uitdagingen van gebouwen aan zee. <br>
                 Zand, zout en veelvuldige passage vereisen een regelmatige en doordachte schoonmaak. <br>
                 <br>
@@ -125,7 +125,7 @@
                 <ul>
                     <li>Specialist in schoonmaak van gemeenschappelijke delen</li>
                     <li>Ervaren en betrouwbaar schoonmaakteam</li>
-                    <li>Actief in Middelkerke, Westende, Lombardsijde en Oostende</li>
+                    <li>Actief in Middelkerke en omgeving</li>
                     <li>Flexibele onderhoudscontracten</li>
                     <li>Professionele en hygiënische aanpak</li>
                     <li>Constante kwaliteit en opvolging</li>
@@ -136,7 +136,7 @@
         <div class="contentwit">
             <h3>Offerte voor schoonmaak in Middelkerke</h3>
             <p>Bent u op zoek naar een <b>betrouwbare schoonmaakfirma voor de gemeenschappelijke delen van uw gebouw <br>
-            in Middelkerke, Westende, Lombardsijde of Oostende?</b></p>
+            in Middelkerke?</b></p>
             <br>
             <p>Neem gerust contact op met <b>RayClean c.v.</b> voor een <b>vrijblijvende offerte</b> of meer informatie. <br>
             <br>
